--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ charset-normalizer==2.1.1
 click==8.1.3
 exceptiongroup==1.1.0
 fastapi==0.89.1
-fetcher-for-zjuer==1.0.0
+#fetcher-for-zjuer==1.0.0
 frozenlist==1.3.3
 h11==0.14.0
 httptools==0.5.0
@@ -28,6 +28,7 @@ PyExecJS==1.5.1
 pygtrie==2.5.0
 PySocks==1.7.1
 python-dotenv==0.21.1
+pytz==2022.7.1
 PyYAML==6.0
 requests==2.28.2
 selenium==4.8.0
