--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ async-generator==1.10
 async-timeout==4.0.2
 attrs==22.2.0
 autopep8==2.0.1
+beautifulsoup4==4.11.2
+bs4==0.0.1
 certifi==2022.12.7
 charset-normalizer==2.1.1
 click==8.1.3
@@ -20,6 +22,7 @@ msgpack==1.0.4
 multidict==6.0.4
 nonebot-adapter-onebot==2.2.1
 nonebot2==2.0.0rc3
+numpy==1.24.1
 outcome==1.2.0
 packaging==23.0
 Pillow==9.4.0
@@ -38,6 +41,7 @@ selenium==4.8.0
 six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
 starlette==0.22.0
 tomli==2.0.1
 tomlkit==0.11.6
