--- a/requirements.txt
+++ b/requirements.txt
@@ -10,15 +10,21 @@ bs4==0.0.1
 certifi==2022.12.7
 charset-normalizer==2.1.1
 click==8.1.3
+colour==0.1.5
+contourpy==1.1.0
+cycler==0.11.0
 exceptiongroup==1.1.0
 fastapi==0.89.1
 fetcher-for-zjuer==1.0.0
+fonttools==4.42.0
 frozenlist==1.3.3
 h11==0.14.0
 httptools==0.5.0
 idna==3.4
 jieba==0.42.1
+kiwisolver==1.4.4
 loguru==0.6.0
+matplotlib==3.7.2
 msgpack==1.0.4
 multidict==6.0.4
 nonebot-adapter-onebot==2.2.1
@@ -33,8 +39,10 @@ pydantic==1.10.4
 pydub==0.25.1
 PyExecJS==1.5.1
 pygtrie==2.5.0
+pyparsing==3.0.9
 pypinyin==0.48.0
 PySocks==1.7.1
+python-dateutil==2.8.2
 python-dotenv==0.21.1
 pytz==2022.7.1
 requests==2.28.2
