Apex tracker now functional

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ SESSION_EXPIRE_TIMEOUT=120
 SUPERUSERS=[] # Add your superusers qq here (strings)
 ENVIRONMENT=prod #create .env.prod to assign more environment variables
 API_TIMEOUT=30.0
+SEASON = 17
+SPLIT = 2
